Use Map.copyOf to not clone the map each time we compile an expression